Bug 721249 - Tab-bar buttons are slightly too small. r+ui-review=andreasn

--- a/mail/themes/qute/mail/messenger-aero.css
+++ b/mail/themes/qute/mail/messenger-aero.css
@@ -30,7 +30,7 @@ treechildren::-moz-tree-cell-text {
   margin-bottom: 0;
 }
 
-@media all and (-moz-windows-default-theme) {
+@media (-moz-windows-default-theme) {
   #searchInput {
     border-color: rgba(0, 0, 0, .32);
   }
@@ -105,7 +105,7 @@ treechildren::-moz-tree-cell-text {
   }
 }
 
-@media all and (-moz-windows-compositor) {
+@media (-moz-windows-compositor) {
   #unifinder-searchBox,
   #task-addition-box {
     border-top: none;
@@ -123,5 +123,11 @@ treechildren::-moz-tree-cell-text {
 
   #searchInput[focused="true"] {
     background-color: white;
+  }
+}
+
+@media not all and (-moz-windows-compositor) {
+  #print-preview-toolbar:not(:-moz-lwtheme) {
+    -moz-appearance: -moz-win-browsertabbar-toolbox;
   }
 }
